# wordle-lol

./: Cargo.toml  README.md
src/: lib.rs  nytimes.rs
src/everyday/: main.rs
src/today/: main.rs
